--- a/package.json
+++ b/package.json
@@ -44,7 +44,10 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
     "eslint": "^7.26.0",
+    "eslint-plugin-react": "^7.23.2",
     "prettier": "2.2.1"
   }
 }
