--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,6 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "@typescript-eslint/explicit-function-return-type": "off",
-        "prettier/prettier": "error"
+        "@typescript-eslint/explicit-function-return-type": "off"
     }
 }
