--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-list",
   "version": "0.1.0",
+  "homepage": "https://pcmunoz.github.io/react-list/",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
@@ -22,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -50,6 +53,7 @@
     "@typescript-eslint/parser": "^4.22.1",
     "eslint": "^7.26.0",
     "eslint-plugin-react": "^7.23.2",
+    "gh-pages": "^3.1.0",
     "prettier": "2.2.1"
   }
 }
